--- a/frontend/src/assets/css/comment.css
+++ b/frontend/src/assets/css/comment.css
@@ -55,3 +55,19 @@ hr {
     text-transform: uppercase;
     letter-spacing: -0.3px;
 }
+
+.comment-block {
+    border: 1px solid;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 30px;
+
+}
+
+.comment-block  h4 {
+    float: right;
+
+}
+ p {
+    text-align: center;
+}
