--- a/frontend/src/assets/css/comment.css
+++ b/frontend/src/assets/css/comment.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    padding: 10px 25px 20px 0;
-}
+    padding: 100px 25px 20px 0;
+    margin-left: auto;
+    margin-right: auto;
+    }
 .comment-form > input,
 .comment-form > textarea {
     width: 100%;
@@ -57,7 +59,7 @@ hr {
 }
 
 .comment-block {
-    border: 1px solid;
+    border: 5px solid;
     padding: 15px;
     margin-top: 10px;
     border-radius: 30px;
@@ -74,3 +76,4 @@ hr {
 .comment-block p {
     text-align: center
 }
+
